Fix: add scrollbar to long MathJax formulas

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -73,6 +73,6 @@ h1,h2,h3,h4,h5,h6{
 	font-weight: normal;
 }
 
-.MathJax_SVG_Display, .MathJax_Display {
+.MathJax_SVG_Display, .MathJax_Display, .MJXc-display, .MathJax_PHTML_Display {
     overflow-x: auto;
 }
